[chore] 오늘의 추천 상품 장바구니 아이콘 추가 #21

--- a/client/index.html
+++ b/client/index.html
@@ -316,6 +316,9 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
@@ -327,6 +330,9 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
@@ -338,10 +344,13 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">유기농 밀키퀸 현미 4kg</div>
-                  <span class="product_price">32,500 원</span>
+                  <span class="product_price">25,000 원</span>
                 </div>
               </a>
             </div>
@@ -349,6 +358,9 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info_sale">
                   <div class="product_name">[프로쉬] 베이비 세탁세</div>
@@ -362,10 +374,13 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
-                  <div class="product_price">4,980 원</div>
+                  <span class="product_price">4,980 원</span>
                 </div>
               </a>
             </div>
@@ -373,10 +388,13 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
-                  <div class="product_price">32,500 원</div>
+                  <span class="product_price">32,500 원</span>
                 </div>
               </a>
             </div>
@@ -384,10 +402,13 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">유기농 밀키퀸 현미 4kg</div>
-                  <div class="product_price">25,000 원</div>
+                  <span class="product_price">25,000 원</span>
                 </div>
               </a>
             </div>
@@ -395,12 +416,15 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
-                <div class="product_info">
+                <div class="product_info_sale">
                   <div class="product_name">[프로쉬] 베이비 세탁세</div>
                   <span class="sale_rate">24%</span>
                   <span class="product_price">18,900 원</span>
-                  <div class="cost">24,000 원</div>
+                  <div class="product_cost">24,000 원</div>
                 </div>
               </a>
             </div>
@@ -408,10 +432,13 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
-                  <div class="product_price">4,980 원</div>
+                  <span class="product_price">4,980 원</span>
                 </div>
               </a>
             </div>
@@ -419,10 +446,13 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
-                  <div class="product_price">32,500 원</div>
+                  <span class="product_price">32,500 원</span>
                 </div>
               </a>
             </div>
@@ -430,10 +460,13 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
                 <div class="product_info">
                   <div class="product_name">유기농 밀키퀸 현미 4kg</div>
-                  <div class="product_price">25,000 원</div>
+                  <span class="product_price">25,000 원</span>
                 </div>
               </a>
             </div>
@@ -441,12 +474,15 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
                 </div>
-                <div class="product_info">
+                <div class="product_info_sale">
                   <div class="product_name">[프로쉬] 베이비 세탁세</div>
                   <span class="sale_rate">24%</span>
                   <span class="product_price">18,900 원</span>
-                  <div class="cost">24,000 원</div>
+                  <div class="product_cost">24,000 원</div>
                 </div>
               </a>
             </div>
