[chore] 할인 상품 추천 완성 #21

--- a/client/index.html
+++ b/client/index.html
@@ -500,7 +500,192 @@
     </div>
 
     <!-- 할인 상품 추천 -->
-
+    <section class="today_recommend_products">
+      <h2 class="a11yHidden">할인 상품 추천</h2>
+      <p class="recommend_products_sub">놓치면 후회할 가격</p>
+      <div class="swiper_container">
+        <div class="swiper_recommend_products">
+          <div class="swiper-wrapper recommend_products_wrapper">
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <span class="product_price">4,980 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <span class="product_price">32,500 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">유기농 밀키퀸 현미 4kg</div>
+                  <span class="product_price">25,000 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info_sale">
+                  <div class="product_name">[프로쉬] 베이비 세탁세</div>
+                  <span class="sale_rate">24%</span>
+                  <span class="product_price">18,900 원</span>
+                  <div class="product_cost">24,000 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <span class="product_price">4,980 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <span class="product_price">32,500 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">유기농 밀키퀸 현미 4kg</div>
+                  <span class="product_price">25,000 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info_sale">
+                  <div class="product_name">[프로쉬] 베이비 세탁세</div>
+                  <span class="sale_rate">24%</span>
+                  <span class="product_price">18,900 원</span>
+                  <div class="product_cost">24,000 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <span class="product_price">4,980 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <span class="product_price">32,500 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info">
+                  <div class="product_name">유기농 밀키퀸 현미 4kg</div>
+                  <span class="product_price">25,000 원</span>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend_products_slide">
+              <a href="/">
+                <div class="product_img_container">
+                  <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <button type="button">
+                    <img src="./assets/icons/main/Cart.png" alt="장바구니 아이콘" />
+                  </button>
+                </div>
+                <div class="product_info_sale">
+                  <div class="product_name">[프로쉬] 베이비 세탁세</div>
+                  <span class="sale_rate">24%</span>
+                  <span class="product_price">18,900 원</span>
+                  <div class="product_cost">24,000 원</div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button-prev recommend_products_prev"></div>
+        <div class="swiper-button-next recommend_products_next"></div>
+      </div>
+    </section>
     <!-- 최근 본 상품 -->
     <section class="recent_products_container">
       <h2 class="recent_products_title">최근 본 상품</h2>
