[style] 비밀글 체크박스 적용  #22

--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -8,7 +8,7 @@
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/common.css" />
-  <link rel="stylesheet" href="./css/page_productDetail.css" />
+  <link rel="stylesheet" href="./css/page_productDetail_dr.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module"></script>
   <title>마켓칼리</title>
@@ -594,7 +594,7 @@
     </div>
     <label class="">
       <input name="isSecret" type="checkbox" class="">
-      <img src="">비밀글로 문의하기</span></label>
+      <img src="./assets/icons/Icon/unchecked.svg"><span>비밀글로 문의하기</span></label>
 
     <div class="review-popup-button-wrapper">
       <button class="btn-cancel">취소</button>
@@ -668,7 +668,7 @@
             주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)<span class="footer_bar">|</span>대표이사 : 김슬아
           </p>
           <p>
-            입점문의 : <a href="#">입정문의하기</a><span class="footer_bar">|</span>제휴문의 : <a href="#">business@karlycorp.com</a>
+            입점문의 : <a href="#">입점문의하기</a><span class="footer_bar">|</span>제휴문의 : <a href="#">business@karlycorp.com</a>
           </p>
           <p>채용문의 : recruit@karlycorp    .com</p>
           <p>팩스 : 070 - 7500 - 6098</p>
