--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -8,7 +8,7 @@
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/common.css" />
-  <link rel="stylesheet" href="./css/page_productDetail.css"> 
+  <link rel="stylesheet" href="./css/page_productDetail_my.css"> 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module"></script>
   <title>마켓칼리</title>
