--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 </head>
 
 <body>
+  <!-- popup_beauty -->
+  <div id="modal">
+    <div class="popup_container">
+      <div class="popup_beauty-container">
+        <a href="/" class="popup_beauty" title="처음 만나는 뷰티 플랫폼, 뷰티 칼리 사이트로 이동 (현재창)"></a>
+      </div>
+      <button type="button" class="close_popup_for_day">오늘 하루 안 보기</button>
+      <button type="button" class="close_popup">닫기</button>
+    </div>
+  </div>
+  
   <header class="header_wrap">
     <section class="popup_wrap">
       <div class="popup container">
@@ -214,14 +225,14 @@
               <span>전통주</span>
             </a>
           </li>
-  
+          
           <li>
             <a href="#">
               <img src="./client/assets/icons/category/detergent.png" alt="" />
               <span>생활용품 · 리빙 · 캠핑</span>
             </a>
           </li>
-  
+          
           <li>
             <a href="#">
               <img src="./client/assets/icons/category/skincare.png" alt="" />
@@ -699,15 +710,6 @@
     </section>
   </main>
 
-  <!-- pop_up -->
-  <div class="popup_container">
-    <a href="/" class="popup_beauty">
-      <p class="a11yHidden">처음 만나는 뷰티 플랫폼</p>
-      <p class="a11yHidden">지금 바로 만나보세요!</p>
-    </a>
-    <button type="button" class="close_popup_for_day">오늘 하루 안 보기</button>
-    <button type="button" class="close_popup">닫기</button>
-  </div>
 
 
   <footer class="footer_wrap">
