--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/page_productDetail_dr.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script src="./js/productDetail/productDetail_dr.js" type="module"></script>
   <script src="./js/main.js" type="module"></script>
   <title>마켓칼리</title>
 </head>
