--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./client/css/common.css" />
   <link rel="stylesheet" href="./client/css/juhee.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-  <script src="./js/main.js" type="module"></script>
+  <script src="./client/js/main.js" type="module"></script>
   <title>마켓칼리</title>
 </head>
 
