--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/page_productDetail_my.css"> 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script defer src="./js/productDetail/productDetail_my.js"></script>
   <script src="./js/main.js" type="module"></script>
   <title>마켓칼리</title>
 </head>
