[feat] 네비게이션>선택한 버튼 위치로 화면 초점 이동(상품설명,상세정보 완료) #40

--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -404,8 +404,8 @@
   </main>
   
   <navigation class="product_navigation">
-    <button class="btn_product_description">상품설명</button>
-    <button class="btn_detail_information">상세정보</button>
+    <button onclick="goToScroll('description')" class="btn_product_description">상품설명</button>
+    <button onclick="goToScroll('detail_information')"class="btn_detail_information">상세정보</button>
     <button class="btn_product_review">후기</button>
     <button class="btn_product_inquiry">문의</button>
   </navigation> <!-- /product_navigation -->
