[feat] 상품후기 공지 아코디언 적용  #15

--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -326,9 +326,9 @@
           <span class="notice-badge">
             공지
           </span>
-          <button class="notice-title">금주의 베스트 후기 안내</button>
+          <button class="notice-title collapsible">금주의 베스트 후기 안내</button>
         </div> 
-        <div class="notice-content">  
+        <div class="notice-content folded">  
           <img class="quest-icon" src="./assets/icons/Icon/question.svg" alt=""/>
           <div class="question">
             <p>
@@ -362,9 +362,9 @@
         <span class="notice-badge">
           공지
         </span>
-        <button class="notice-title">상품 후기 적립금 정책 안내</button>
+        <button class="notice-title collapsible">상품 후기 적립금 정책 안내</button>
       </div> 
-      <div class="notice-content">  
+      <div class="notice-content folded">  
         <img class="quest-icon" src="./assets/icons/Icon/question.svg" alt=""/>
         <div class="question">
           <p>
@@ -526,10 +526,12 @@
             공지
           </span>
           <button class="notice-title">판매(일시)중단 제품 안내(22.11.10 업데이트)</button></td>
+          
           <td>칼리</td>
           <td>2017.02.01</td>
           <td>-</td>
         </tr>
+        
         <tr>
           <td><button>팩이 터져서 왔어요</button></td>
           <td>김*식</td>
