[feat] 상품문의 게시판 아코디언 메뉴 1차 구현 #42

--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -513,6 +513,7 @@
         <li>배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이컬리 내 1:1 문의에 남겨주세요.</li>
       </ul>
     </section>
+
     <table class="inquiry-table">
       <thead>
         <tr>
@@ -527,7 +528,7 @@
           <td><span class="notice-badge">
             공지
           </span>
-          <button class="notice-title">판매(일시)중단 제품 안내(22.11.10 업데이트)</button></td>
+          <button class="notice-title collapsible-table">판매(일시)중단 제품 안내(22.11.10 업데이트)</button></td>
           <td>칼리</td>
           <td>2017.02.01</td>
           <td>-</td>
@@ -535,7 +536,7 @@
       </tbody>
     </table>
 
-      <div class="notice-content">  
+      <div class="notice-content folded">  
         <img class="quest-icon" src="./assets/icons/Icon/question.svg" alt=""/>
         <div class="question">
           <p>
@@ -567,7 +568,7 @@
     <table class="inquiry-table">
       <tbody>
         <tr>
-          <td><button>팩이 터져서 왔어요</button></td>
+          <td><button class="collapsible-table">팩이 터져서 왔어요</button></td>
           <td>김*식</td>
           <td>2022.11.11</td>
           <td>답변대기</td>
@@ -575,7 +576,7 @@
       </tbody>
     </table>
 
-    <div class="notice-content">  
+    <div class="notice-content folded">  
       <img class="quest-icon" src="./assets/icons/Icon/question.svg" alt=""/>
       <div class="question">
         <p>
@@ -607,7 +608,7 @@
     <table class="inquiry-table">
       <tbody>
         <tr>
-          <td class="is-secret"><button>비밀글입니다.</button><img src="./assets/icons/Icon/Lock.svg" alt=""/></td>
+          <td class="is-secret"><button class="collapsible-table">비밀글입니다.</button><img src="./assets/icons/Icon/Lock.svg" alt=""/></td>
           <td>김*범</td>
           <td>2022.09.13</td>
           <td class="is-answered">답변완료</td>
@@ -627,7 +628,7 @@
       </tbody>
     </table>
   
-    <div class="notice-content">  
+    <div class="notice-content folded">  
       <img class="quest-icon" src="./assets/icons/Icon/question.svg" alt=""/>
       <div class="question">
         <p>
